<resources>
    <string name="app_name">Yildo Shisha</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_home">Start</string>
    <string name="nav_news">Neuigkeiten</string>
    <string name="nav_aboutUs">Über uns</string>
    <string name="nav_drinks">Getränke</string>
    <string name="nav_smokes">Shishas</string>
    <string name="nav_imprint">Impressum</string>
    <string name="nav_aboutDev">Über die App</string>
    <string name="nav_exit">Verlassen</string>
    <string name="img_logo">Logo</string>
    <string name="yildo_nav_bar_tv">ShishaBar<font color="#F5F5F5" size="30"><b>Yildo</b></font></string>
    <string name="yildo_main_tv">Shisha Bar Yildo</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="aboutus_title">Über uns</string>
    <string name="aboutus_content">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</string>
    <string name="aboutdev_entwickler">Entwickelt von</string>
    <string name="aboutdev_von">Marc Friedrich\nE-Mail: santya@protonmail.com</string>
    <string name="imp1">Angaben gemäß § 5 TMG</string>
    <string name="imp2">Max Muster\nMusterweg\n12345 Musterstadt</string>
    <string name="imp3_1">Kontakt</string>
    <string name="imp3">Telefon: 123\nFax: 123\nE-Mail: a@a.de</string>
    <string name="imp4_1">Umsatzsteuer-ID:</string>
    <string name="imp4">Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: 123</string>
    <string name="imp5">Wirtschafts-ID:\n123</string>
    <string name="imp6_1">Aufsichtsbehörde:</string>
    <string name="imp6">123</string>
    <string name="section_warme_getraenke">Warme Getränke</string>
    <string name="section_soft_getraenke"><font color="#CDDC39">Softgetränke</font></string>
    <string name="section_saefte">Säfte</string>
    <string name="section_sekt">Sekt</string>
    <string name="section_bier">Bier</string>
    <string name="section_wein">Wein</string>
    <string name="section_longdrinks">Longdrinks</string>
    <string name="section_shots">Shots</string>
    <string name="section_coktails_alkoholfrei">Alkoholfreie Cocktails</string>
    <string name="section_cocktails">Cocktails</string>
    <string name="typ_warme_getraenke">typ_warme_getraenke</string>
    <string name="war_kaffee_klein">Kaffee klein</string>
    <string name="war_kaffee_groß">Kaffee groß</string>
    <string name="war_espresso">Espresso</string>
    <string name="war_espresso_doppelt">Espresso doppelt</string>
    <string name="war_cappuccino">Cappuccino</string>
    <string name="war_latte_macchiato">Latte macchiato</string>
    <string name="war_milchkaffee">Milchkaffee</string>
    <string name="war_kakao">Kakao</string>
    <string name="war_tee">Tee (versch. Sorten)</string>
    <string name="typ_softgetraenke">typ_softgetraenke</string>
    <string name="sof_coca_cola">Coca Cola</string>
    <string name="sof_fanta">Fanta</string>
    <string name="sof_spezi">Spezi</string>
    <string name="sof_sprite">Sprite</string>
    <string name="sof_mineralwasser_klein">Mineralwasser klein</string>
    <string name="sof_mineralwasser_groß">Mineralwasser groß</string>
    <string name="sof_red_bull">Red Bull</string>
    <string name="sof_red_bull_zero">Red Bull Zero</string>
    <string name="sof_tonic_water">Tonic Water</string>
    <string name="sof_bitter_lemon">Bitter Lemon</string>
    <string name="sof_ginger_ale">Ginger Ale</string>
    <string name="sof_schweppes_russian_wild_berry">Schweppes Russian Wild Berry</string>
    <string name="sof_eistee_pfirsich">Eistee Pfirsich</string>
    <string name="sof_eistee_granatapfel">Eistee Granatapfel</string>
    <string name="sof_eistee_zitrone">Eistee Zitrone</string>
    <string name="sof_orangina_rot">Orangina rot</string>
    <string name="sof_orangina_gelb">Orangina gelb</string>
    <string name="sof_moloko">Moloko</string>
    <string name="sof_28black">28 Black</string>
    <string name="typ_saefte">typ_saefte</string>
    <string name="sae_apfelsaft_1">Apfelsaft (0,3 l)</string>
    <string name="sae_apfelsaft_2">Apfelsaftschorle (0,3 l)</string>
    <string name="sae_orangensaft_1">Orangensaft (0,3 l)</string>
    <string name="sae_orangensaft_2">Orangensaftschorle (0,3 l)</string>
    <string name="sae_ananassaft_1">Ananassaft (0,3 l)</string>
    <string name="sae_ananassaft_2">Ananassaftschorle (0,3 l)</string>
    <string name="sae_kirschsaft_1">Kirschsaft (0,3 l)</string>
    <string name="sae_kirschsaft_2">Kirschsaftschorle (0,3 l)</string>
    <string name="sae_bananensaft_1">Bananensaft (0,3 l)</string>
    <string name="sae_bananensaft_2">Bananensaftschorle (0,3 l)</string>
    <string name="sae_maracujasaft_1">Maracujasaft (0,3 l)</string>
    <string name="sae_maracujasaft_2">Maracujasaftschorle (0,3 l)</string>
    <string name="sae_cranberrysaft_1">Cranberrysaft (0,3 l)</string>
    <string name="sae_cranberrysaft_2">Cranberrysaftschorle (0,3 l)</string>
    <string name="sae_kiba_1">KiBa (0,3 l)</string>
    <string name="sae_kiba_2">KiBa-Schorle (0,3 l)</string>
    <string name="typ_sekt">typ_sekt</string>
    <string name="sek_sekt">Sekt</string>
    <string name="sek_sekt_orange">Sekt Orange</string>
    <string name="sek_hugo">Hugo</string>
    <string name="sek_aperol_spritz">Aperol Spritz</string>
    <string name="typ_wein">typ_wein</string>
    <string name="wei_rotwein">Rotwein</string>
    <string name="wei_weißwein">Weißwein</string>
    <string name="wei_rose">Rosé</string>
    <string name="wei_weinschorle">Weinschorle</string>
    <string name="typ_bier">typ_bier</string>
    <string name="bie_pils">Pils</string>
    <string name="bie_donauradler">Donauradler</string>
    <string name="bie_hefeweizen">Hefeweizen</string>
    <string name="bie_colaweizen">Colaweizen</string>
    <string name="bie_saftweizen">Saftweizen</string>
    <string name="bie_desperados">Desperados</string>
    <string name="bie_corona">Corona</string>
    <string name="bie_heineken">Heineken</string>
    <string name="bie_becks">Becks</string>
    <string name="bie_becks_green_lemon">Becks Green Lemon</string>
    <string name="bie_becks_ice">Becks Ice</string>
    <string name="bie_pils_alkoholfrei">Pils alkoholfrei</string>
    <string name="bie_weizen_alkoholfrei">Weizen alkoholfrei</string>
    <string name="typ_longdrinks">typ_longdrinks</string>
    <string name="lon_vodka_bull">Vodka Bull</string>
    <string name="lon_vodka_lemon">Vodka Lemon</string>
    <string name="lon_jacky_cola">Jacky Cola</string>
    <string name="lon_gin_tonic">Gin Tonic</string>
    <string name="lon_jaeger_bull">Jäger Bull</string>
    <string name="lon_jaeger_kirsch">Jäger Kirsch</string>
    <string name="lon_malibu_kirsch">Malibu Kirsch</string>
    <string name="lon_malibu_maracuja">Malibu Maracuja</string>
    <string name="lon_cuba_libre">Cuba Libre</string>
    <string name="lon_bacardi_cola">Bacardi Cola</string>
    <string name="lon_bacardi_orange">Bacardi Orange</string>
    <string name="lon_blanco_43">Blanco 43</string>
    <string name="lon_maracuja_43">Maracuja 43</string>
    <string name="lon_tropic_43">Tropic 43</string>
    <string name="typ_shots">typ_shots</string>
    <string name="sho_vodka">Vodka</string>
    <string name="sho_tequila_gold">Tequila Gold</string>
    <string name="sho_tequila_silber">Tequila Silver</string>
    <string name="sho_dos_mas">Dos Mas</string>
    <string name="sho_jaegermeister">Jägermeister</string>
    <string name="sho_jack_daniels">Jack Daniels</string>
    <string name="sho_ficken">Ficken</string>
    <string name="sho_baileys">Baileys</string>
    <string name="sho_sambuca">Sambuca</string>
    <string name="typ_cocktails_alkoholfrei">typ_cocktails_alkoholfrei</string>
    <string name="cna_virgin_mojito">Virgin Mojito</string>
    <string name="cna_virgin_colada">Virgin Colada</string>
    <string name="cna_ipanema">Ipanema</string>
    <string name="cna_dulcinea">Dulcinea</string>
    <string name="cna_coconut_kiss">Coconut Kiss</string>
    <string name="cna_summer_time">Summer Time</string>
    <string name="cna_nix_drin">Nix Drin</string>
    <string name="cna_kiss_on_the_beach">Kiss on the Beach</string>
    <string name="typ_cocktails_alkohol">typ_cocktails_alkohol</string>
    <string name="cwa_caipirinha">Caipirinha</string>
    <string name="cwa_mojito">Mojito</string>
    <string name="cwa_sex_on_the_beach">Sex on the Beach</string>
    <string name="cwa_tequila_sunrise">Tequila Sunrise</string>
    <string name="cwa_malibu_sunrise">Malibu Sunrise</string>
    <string name="cwa_kingston">Kingston</string>
    <string name="cwa_pina_colada">Pina Colada</string>
    <string name="cwa_moonlight_shadow">Moonlight Shadow</string>
    <string name="cwa_bols_blue_ocean">BOLS Blue Ocean</string>
    <string name="cwa_swimming_pool">Swimming Pool</string>
    <string name="cwa_thats_life">That\'s Life</string>
    <string name="cwa_yildo_gruene_suende">YILDOs "Grüne Sünde"</string>
    <string name="cwa_long_island_ice_tea">Long Island Ice Tea</string>
    <string name="section_7days">7Days</string>
    <string name="section_adalya">Adalya</string>
    <string name="section_al_waha">Al Waha</string>
    <string name="section_al_fakher">Al Fakher</string>
    <string name="section_chillma">Chillma</string>
    <string name="section_chaos">Chaos</string>
    <string name="section_yildo">Yildo</string>
    <string name="section_maridan_tobacco">Maridan Tobacco</string>
    <string name="section_hasso">Hasso</string>
    <string name="section_social_smoke">Social Smoke</string>
    <string name="section_oscar">Oscar</string>
    <string name="typ_7days">typ_7days</string>
    <string name="sda_cold_peach">Cold Peach</string>
    <string name="sda_cold_melon">Cold Melon</string>
    <string name="typ_adalya">typ_adalya</string>
    <string name="ada_love_66">Love 66</string>
    <string name="ada_lady_killer">Lady Killer</string>
    <string name="ada_hawai">Hawai</string>
    <string name="typ_al_waha">typ_al_waha</string>
    <string name="alw_kaugummi_zimt">Kaugummi Zimt</string>
    <string name="alw_hot_and_cold">Hot and Cold</string>
    <string name="typ_al_fakher">typ_al_fakher</string>
    <string name="alf_doppel_apfel">Doppel Apfel</string>
    <string name="alf_traube_minze">Traube Minze</string>
    <string name="typ_chillma">typ_chillma</string>
    <string name="chi_persian_apple">Persian Apple</string>
    <string name="typ_chaos">typ_chaos</string>
    <string name="cha_babylou">Babylou</string>
    <string name="cha_oriental_cay">Oriental Cay</string>
    <string name="cha_riddle">Riddle</string>
    <string name="cha_wtf">WTF</string>
    <string name="cha_crazy_gobline">Crazy Goblin</string>
    <string name="typ_yildo">typ_yildo</string>
    <string name="yil_eisbonbon">Eisbonbon 2.0</string>
    <string name="typ_maridan_tobacco">typ_maridan_tobacco</string>
    <string name="mar_tingle_tangle">Tingle Tangle</string>
    <string name="typ_hasso">typ_hasso</string>
    <string name="has_cherry_chito">Cherry Chito</string>
    <string name="has_grape_addiction">Grape Addiction</string>
    <string name="has_lemon_porn">Lemon Porn</string>
    <string name="typ_social_smoke">typ_social_smoke</string>
    <string name="soc_lemon_chill">Lemon Chill</string>
    <string name="soc_lemon_drop">Lemon Drop</string>
    <string name="soc_pink_lemonade">Pink Lemonade</string>
    <string name="soc_watermelon_chill">Watermelon Chill</string>
    <string name="soc_wildberry_chill">Wildberry Chill</string>
</resources>